.vscode/allianceuat_compare/force-app/main/default/objects/SIM_Filter_Condition__mdt/SIM_Filter_Condition__mdt.object-meta.xml
<CustomObject>
    <label>SIM Filter Condition</label>
    <pluralLabel>SIM Filter Conditions</pluralLabel>
</CustomObject>