.vscode/allianceuat_compare/force-app/main/default/objects/SIM_Filter_Condition__mdt/fields/Condition_Object__c.field-meta.xml
<CustomField>
    <fullName>Condition_Object__c</fullName>
    <label>Condition Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Shift_Approval_Conditions</relationshipLabel>
    <relationshipName>Shift_Approval_Conditions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>