.vscode/allianceuat_compare/force-app/main/default/objects/SIM_Filter_Condition__mdt/fields/Condition_Object_Title_Field__c.field-meta.xml
<CustomField>
    <fullName>Condition_Object_Title_Field__c</fullName>
    <label>Condition Object Title Field</label>
    <metadataRelationshipControllingField>SIM_Filter_Condition__mdt.Condition_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Shift_Approval_Conditions1</relationshipLabel>
    <relationshipName>Shift_Approval_Conditions1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>