.vscode/allianceuat_compare/force-app/main/default/objects/SIM_Filter_Condition__mdt/fields/Match_Object__c.field-meta.xml
<CustomField>
    <fullName>Match_Object__c</fullName>
    <inlineHelpText>Must Always be set to the shift object</inlineHelpText>
    <label>Match Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Shift_Approval_Conditions1</relationshipLabel>
    <relationshipName>Shift_Approval_Conditions1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>