.vscode/allianceuat_compare/force-app/main/default/objects/SIM_Filter_Condition__mdt/fields/Match_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>Match_Object_Field__c</fullName>
    <inlineHelpText>This is the shift field which must be an ID field</inlineHelpText>
    <label>Match Object Field</label>
    <metadataRelationshipControllingField>SIM_Filter_Condition__mdt.Match_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Shift_Approval_Conditions</relationshipLabel>
    <relationshipName>Shift_Approval_Conditions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>