.vscode/allianceuat_compare/force-app/main/default/objects/SIM_Filter_Condition__mdt/fields/Search_Icon__c.field-meta.xml
<CustomField>
    <fullName>Search_Icon__c</fullName>
    <inlineHelpText>SLDS icon</inlineHelpText>
    <label>Search Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>