.vscode/allianceuat_compare/force-app/main/default/objects/SIM_Filter_Condition__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Related Object Match</fullName>
                <default>true</default>
                <label>Related Object Match</label>
            </value>
            <value>
                <fullName>Text Match</fullName>
            </value>
            <value>
                <fullName>Date Match</fullName>
            </value>
            <value>
                <fullName>Boolean Match</fullName>
            </value>
            <value>
                <fullName>Picklist Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>