.vscode/allianceuat_compare/force-app/main/default/objects/SIM_Filter_Condition__mdt/fields/Use_Filter_Condition_As_Label__c.field-meta.xml
<CustomField>
    <fullName>Use_Filter_Condition_As_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, use the label on the custom metadata instead of the field name.</description>
    <inlineHelpText>If this is checked, use the label on the custom metadata instead of the field name.</inlineHelpText>
    <label>Use Filter Condition As Label</label>
    <type>Checkbox</type>
</CustomField>